Sat Sep 20 14:23:53 1997  Mikael Djurfeldt  <mdj@kenneth>

	* slib.scm (slib:load): Export.

	* boot-9.scm (in-vicinity): Bugfix: Don't add "/" to an empty
	vicinity;
	Provide defmacro.

Thu Sep 18 01:24:31 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* r4rs.scm (apply): Set name property to 'apply.

Tue Sep 16 22:09:50 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (keyword->symbol, display-usage-report): Changed
 	length --> string-length.  (Thanks to Aleksandar Bakic.)
	(separate-fields-discarding-char, separate-fields-after-char,
 	separate-fields-before-char): Bugfix from Maciej Stachowiak
	<mstachow@mit.edu>.  Thanks!
	(try-module-linked): Try to find module among those already
	registered.
	(try-module-dynamic-link): Removed the first test which
	corresponds to a call to `try-module-linked'.
	(resolve-module): Resolve modules in this order: 1. Already
	registered modules (for example those which have been statically
	linked), 2. Try to autoload an .scm-file, 3. Try to dynamically
	link a .so-file.

Mon Sep 15 23:39:54 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (iota): Renamed list-reverse! --> reverse!

Thu Sep 11 02:31:38 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* session.scm (name): New procedure: Gives name of object.
	(source): New procedure: Gives source of object.

Wed Sep 10 20:12:45 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

*	* boot-9.scm (primitive-macro?): New procedure.

	* slib.scm: Added hack which transfers syntactic information from
	the builtin variable `define' to the slib version if module (ice-9
	syncase) has been loaded.  This is necessary to get correct
	expansion inside the slib module.

	* psyntax.ss (build-let, build-named-let): New output
 	constructors.
	(build-lexical-var): Seed gensym with symbolic name.
	(self-evaluating?): Add keywords among self-evaluating types.
	(let): New core form.
	(if): Removed from core language.
	(or, and, let, cond): Removed syntactic definitions.